--- a/app/app.html
+++ b/app/app.html
@@ -13,14 +13,25 @@
 </head>
 <body>
 
-    <div class="container">
-        <!-- <h1 id="greet"></h1>
-        <p class="subtitle">
-            Welcome to <a href="http://electron.atom.io" class="js-external-link">Electron</a> app running on this magnificent <strong id="platform-info"></strong> machine.
-        </p>
-        <p class="subtitle">
-            You are in <strong id="env-name"></strong> environment.
-        </p> -->
+<!--  <div class="container">
+   <h1 id="greet"></h1>
+    <p class="subtitle">
+        Welcome to <a href="http://electron.atom.io" class="js-external-link">Electron</a> app running on this magnificent <strong id="platform-info"></strong> machine.
+    </p>
+    <p class="subtitle">
+        You are in <strong id="env-name"></strong> environment.
+    </p>
+</div>-->
+
+
+    <div id="blocker">
+
+        <div id="instructions">
+            <span style="font-size:40px">Click to play</span>
+            <br />
+            (W,A,S,D = Move, SPACE = Jump, MOUSE = Look, CLICK = Shoot)
+        </div>
+
     </div>
 
 </body>
