adding working method whose adds velocity to precised element

--- a/app/app.html
+++ b/app/app.html
@@ -29,7 +29,7 @@
         <div id="instructions">
             <span style="font-size:40px">Click to play</span>
             <br />
-            (W,A,S,D = Move, SPACE = Jump, MOUSE = Look, CLICK = Shoot)
+            <button id="addSpeed">Add speed to square object</button>
         </div>
 
     </div>
