adding fullscreen xD

--- a/app/app.html
+++ b/app/app.html
@@ -30,6 +30,7 @@
             <span style="font-size:40px">Click to play</span>
             <br />
             <button id="addSpeed">Add speed to square object</button>
+            <button id="fullscreen">fullscreen</button>
         </div>
 
     </div>
