aabb working on

--- a/app/app.html
+++ b/app/app.html
@@ -27,10 +27,10 @@
     <div id="blocker">
 
         <div id="instructions">
-            <span style="font-size:40px">Click to play</span>
-            <br />
+            <div class="child">
             <button id="addSpeed">Add speed to square object</button>
             <button id="fullscreen">fullscreen</button>
+            </div>
         </div>
 
     </div>
